--- a/Editor.html
+++ b/Editor.html
@@ -25,7 +25,7 @@
 		<div class="collapse navbar-collapse" id="navbar-list-11">
 		  <ul class="navbar-nav ml-auto">
 			<li class="nav-item active">
-			  <a class="nav-link" href="#" onclick="loadGpInfo();"><span class="glyphicon glyphicon-envelope"></span> Thông tin gia phả</a>
+			  <a class="nav-link" href="Editor.html" onclick="loadGpInfo();"><span class="glyphicon glyphicon-envelope"></span> Thông tin gia phả</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="#" onclick="loadInfo(1);"><span class="glyphicon glyphicon-envelope"></span> Thủy tổ</a>
@@ -43,7 +43,7 @@
 			  <a class="nav-link" href="#" onclick="loadInfo(4);"><span class="glyphicon glyphicon-envelope"></span> Hương hỏa</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="../" ><span class="glyphicon glyphicon-envelope"></span> Trở về Home</a>
+			  <a class="nav-link" href="main.html" ><span class="glyphicon glyphicon-envelope"></span> Trở về Home</a>
 			</li>
 		  </ul>
 		</div>
