--- a/main.html
+++ b/main.html
@@ -59,7 +59,11 @@
 		</div>
 	</nav>
 
-
+	<div class="alert alert-warning" role="alert">
+		<p>Hiện tại bạn chưa tạo gia phả</p>
+		<p>Nếu muốn tạo mới gia phả. 
+		<a class="btn btn-sm btn-success" href="Editor.html">Tạo mới ở đây</a></p>
+	</div>
 	
 	<div class="container-fluid content-row" id="list_gp">
 	</div>
