--- a/Giapha/Gia phả Việt Nam - Gia phả Việt Nam.html
+++ b/Giapha/Gia phả Việt Nam - Gia phả Việt Nam.html
@@ -97,18 +97,19 @@
         </div>
     </div>
 
-    <div class="footer txtC w100">
-<div class="clb ovh fw100 navBottom fonts ul-none">
-    <ul>
-        <li><a href="">TRANG CHỦ</a></li>
-        <li><a href="default.aspx?lang=vi-VN&cp=tin-tuc">TIN TỨC</a></li>
-        <li><a href="default.aspx?cp=gia-pha-viet-nam">GIA PHẢ VIỆT NAM</a></li>
-        <li><a href="default.aspx?cp=nttt">NGHĨA TRANG TRỰC TUYẾN</a></li>
-        <li><a href="default.aspx?cp=gioi-thieu">GIỚI THIỆU</a></li>
-        <li><a href="default.aspx?cp=lien-he-gop-y">LIÊN HỆ - GÓP Ý</a></li>
-    </ul>
+<div class="footer txtC w100">
+	<div class="clb ovh fw100 navBottom fonts ul-none">
+		<ul>
+			<li><a href="">TRANG CHỦ</a></li>
+			<li><a href="default.aspx?lang=vi-VN&cp=tin-tuc">TIN TỨC</a></li>
+			<li><a href="default.aspx?cp=gia-pha-viet-nam">GIA PHẢ VIỆT NAM</a></li>
+			<li><a href="default.aspx?cp=nttt">NGHĨA TRANG TRỰC TUYẾN</a></li>
+			<li><a href="default.aspx?cp=gioi-thieu">GIỚI THIỆU</a></li>
+			<li><a href="default.aspx?cp=lien-he-gop-y">LIÊN HỆ - GÓP Ý</a></li>
+		</ul>
+	</div>
+	<p>&copy; </p>
 </div>
-<p>&copy; </p></div>
 
 </div>
     </form>
