--- a/Giapha/Album.html
+++ b/Giapha/Album.html
@@ -191,27 +191,24 @@ function __doPostBack(eventTarget, eventArgument) {
             </div>
         </div>
     
-<script type="text/javascript">
-    CKEDITOR.replace('txtDescription', { customConfig: '/plugins/fckeditor/ucp_toolbar.js' });
-</script>
         </div>
     </div>
     <div class = "ucp_def_footer">
         
     </div>
 <div class="footer txtC w100">
-	<div class="clb ovh fw100 navBottom fonts ul-none">
+	<div class="col-sm-12 clb ovh navBottom fonts ul-none">
 		<ul>
-			<li><a href="">TRANG CHỦ</a></li>
-			<li><a href="default.aspx?lang=vi-VN&cp=tin-tuc">TIN TỨC</a></li>
-			<li><a href="default.aspx?cp=gia-pha-viet-nam">GIA PHẢ VIỆT NAM</a></li>
-			<li><a href="default.aspx?cp=nttt">NGHĨA TRANG TRỰC TUYẾN</a></li>
-			<li><a href="default.aspx?cp=gioi-thieu">GIỚI THIỆU</a></li>
-			<li><a href="default.aspx?cp=lien-he-gop-y">LIÊN HỆ - GÓP Ý</a></li>
+			<li><a href="#">TRANG CHỦ</a></li>
+			<li><a href="#">TIN TỨC</a></li>
+			<li><a href="#">GIA PHẢ VIỆT NAM</a></li>
+			<li><a href="#">NGHĨA TRANG TRỰC TUYẾN</a></li>
+			<li><a href="#">GIỚI THIỆU</a></li>
+			<li><a href="#">LIÊN HỆ - GÓP Ý</a></li>
 		</ul>
 	</div>
 	<div class="col-sm-12">
-                <h5>Trường Đại Học Công Nghiệp Hà Nội</h5>
+                <h5><a href="https://www.haui.edu.vn/vn">Trường Đại Học Công Nghiệp Hà Nội</a></h5>
                 <h4>Nhóm thực hiện: Nhóm 02 ĐH-KTPM3-K11</h4>
                 <h4>Giảng viên hướng dẫn: <span class="text-info font-weight-bold">ThS. Hoàng Quang Huy</span>
                 </h4>
@@ -219,19 +216,19 @@ function __doPostBack(eventTarget, eventArgument) {
                 <br />
                 <div class="row">
                     <div class="col-sm-6 col-md-4 pb-3 text-center">
-                        <h5>Phạm Văn Hiểu</h5>
+                        <h5><a href="https://www.facebook.com/profile.php?id=100013844047423">Phạm Văn Hiểu</a></h5>
                         <h5>1141360000</h5>
                         <p>0123 456 789</p>
                         <p>abc@gmail.com</p>
                     </div>
                     <div class="col-sm-6 col-md-4 pb-3 text-center border-left border-right">
-                        <h5>Phạm Quốc Cường</h5>
+                        <h5><a href="https://www.facebook.com/llquoc.cuongll">Phạm Quốc Cường</a></h5>
                         <h5>1141360205</h5>
                         <p>0333 385 398</p>
                         <p>quoc.cuong.yb.dhtb@gmail.com</p>
                     </div>
                     <div class="col-sm-6 col-md-4 pb-3 text-center">
-                        <h5>Đào Hữu Dương</h5>
+                        <h5><a href="https://www.facebook.com/ST.OmegaDark">Đào Hữu Dương</a></h5>
                         <h5>1141360000</h5>
                         <p>0123 456 789</p>
                         <p>abc@gmail.com</p>
@@ -241,5 +238,8 @@ function __doPostBack(eventTarget, eventArgument) {
 </div>
 </div>
     </form>
+	<script type="text/javascript">
+    CKEDITOR.replace('txtDescription', { customConfig: '/plugins/fckeditor/ucp_toolbar.js' });
+</script>
 </body>
 </html>
